# amai_ocl

./: .gitignore  README.md  benchmark_guide_cn.md  readme_cn.md
aimai_ocl/: __main__.py  adapters.py  config.py  experiment.py  runner.py
benchmarks/conversational_consumer_selection_v2/: README.md
benchmarks/conversational_consumer_selection_v2/src/conversational_consumer_selection/: __init__.py  clerk_agent_demo.py  demo.py  dialogue_actions.py  dialogue_demo.py  env.py  metrics.py  policies.py  runner.py  schemas.py  simulator.py  tasks.py  transaction_env.py  walkthrough.py
benchmarks/conversational_consumer_selection_v2/src/conversational_consumer_selection/agents/: __init__.py  clerk_agent.py  dialogue_prompts.py  transaction_agents.py
benchmarks/conversational_consumer_selection_v2/tests/: test_benchmark.py
configs/: benchmark_baselines.yaml  benchmark_baselines_qwen.yaml
integrations/coffeebench_ocl/: DESIGN.md  README.md  pyproject.toml
integrations/coffeebench_ocl/src/coffeebench_ocl/: __init__.py  audit.py  contracts.py  json_utils.py  lifecycle.py  phase0_probe.py  phase1.py  phases.py  qwen_model.py  runtime.py  shim.py  tooling.py  validation.py
integrations/coffeebench_ocl/tests/: test_cli_summary.py  test_phase0.py  test_phase1.py  test_qwen_provider.py  test_validation.py
outputs/qwen_baselines_50_20260711/: benchmark_ci.md  benchmark_persona_ci.csv  benchmark_records.csv  benchmark_results.json  benchmark_summary_ci.csv
scripts/: benchmark_ci.py
tests/: test_baseline_arms.py  test_provider_config.py
(+5 files in other folders)
